# invest-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: branch.yml  release.yml
invest_tools/: __init__.py  analysis.py  currency.py  dummy.py  get_dummy.py  log.py  plot.py  portfolio.py  report.py  validation.py
tests/: conftest.py  test_analysis.py  test_get_dummy.py  test_portfolio.py  test_validation.py
tests/test_files/: test_benchmark.csv  test_currency.csv  test_prices.csv  test_prices_invalid.csv  test_returns.csv
