[tool.poetry]
name = "invest-tools"
version = "0.1.0"
description = "Tools to manage portfolio risk analysis"
authors = ["leo <leojpedwards@gmail.com>"]
readme = "README.md"
packages = [{include = "invest_tools"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
