[tool.poetry]
name = "invest-tools"
version = "0.1.0"
description = "Tools to manage portfolio risk analysis"
authors = ["leo <leojpedwards@gmail.com>"]
readme = "README.md"
packages = [{include = "invest_tools"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
scipy = "^1.10.1"
statsmodels = "^0.13.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
